<resources>
    <string name="app_name">Reminder</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signin">SIGN IN</string>
    <string name="or">or</string>
    <string name="title_activity_bottom">BottomActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_settings">Settings</string>
    <string name="settings">SETTINGS</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_task">Tasks</string>
    <string name="all_tasks">ALL TASKS</string>
    <string name="clear_completed">Clear completed</string>
    <string name="sort_by_timer">Sort by: Time</string>
    <string name="plan_my_day">Plan my day</string>
    <string name="list">List</string>
    <string name="account">ACCOUNT</string>
    <string name="profile">Profile</string>
    <string name="preferences">PREFERENCES</string>
    <string name="bell_sound">Bell sound</string>
    <string name="tick_mark">Tick mark</string>
    <string name="vibrate">Vibrate</string>
    <string name="multi_language">Multi language</string>
    <string name="EXIT">EXIT</string>
    <string name="i_wan_to">I wan to...</string>
    <string name="cancel">Cancel</string>
    <string name="put">Put</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="list_name">List name</string>
    <string name="ok">OK</string>
    <string name="new_listing">New listing</string>
    <string name="create_account_with_email">Create account with email</string>
    <string name="create_account">Create account</string>
    <string name="required">Required</string>
    <string name="login_failed">Login failed email</string>
    <string name="create_account_successful">Create successful account</string>
    <string name="create_account_faied">Account creation failed</string>
    <string name="title_profile">Profile</string>
    <string name="delete_account">Delete account</string>
    <string name="sign_out">Sign out</string>
    <string name="task_list">TaskList</string>
    <string name="delete_list">Delete list</string>
    <string name="delete">Delete</string>
    <string name="name">name</string>
    <string name="update_list">Update list</string>
    <string name="update">Update</string>
    <string name="isRecording">IsRecoding</string>
    <string name="task">Task</string>
    <string name="tasks">tasks</string>
    <string name="The_time_you_selected_has_ended">The time you selected has ended</string>
    <string name="today">To day</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="upcoming">Upcoming</string>
    <string name="user">User</string>
    <string name="must_not_be_empty">must not be empty</string>
    <string name="no">No</string>
    <string name="no_note">No note</string>
    <string name="no_address">No address</string>
    <string name="time_created">CREATED</string>
    <string name="delete_task">Delete Task</string>
    <string name="note">Note</string>
    <string name="address">Address</string>
    <string name="update_tasks">Update tasks</string>
    <string name="deleted_data">Deleted the data</string>
    <string name="updated_data">Updated the data</string>
    <string name="start">Start</string>
    <string name="channel_name">chanel_name</string>
    <string name="channel_description">channel_description</string>
    <string name="action_filt_list">Find list</string>
    <string name="SHARE">SHARE</string>
    <string name="thoat_ung_dung">Thoát ứng dụng ?</string>
    <string name="facebook_app_id">307360329876672</string>
</resources>
