<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_task"
        android:icon="@drawable/task_black_36dp"
        android:title="@string/title_task"
        app:showAsAction="always"
        android:enabled="true"/>

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/calendar_black_36dp"
        android:title="@string/title_calendar"
        app:showAsAction="always"
        android:enabled="true"/>


    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/settings_black_36dp"
        android:title="@string/title_settings"
        app:showAsAction="always"
        android:enabled="true"/>

</menu>
