<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toobarSettings"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <TextView
            style="@style/TitleToobar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/settings" />
    </android.support.v7.widget.Toolbar>


    <TextView
        style="@style/TitleSettings"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/preferences" />

    <TextView
        style="@style/TextChildeSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bell_sound" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <Spinner
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"></Spinner>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_play" />
    </LinearLayout>

    <TextView
        style="@style/TextChildeSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tick_mark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <Spinner
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"></Spinner>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_play" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/custom_checkbox2" />

        <TextView
            style="@style/TextChildeSettings"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/vibrate" />
    </LinearLayout>

    <TextView
        style="@style/TextChildeSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/multi_language" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"
        android:padding="5dp">

        <Spinner
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"></Spinner>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_play" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGray" />

    <TextView
        android:id="@+id/tvExit"
        style="@style/TitleSettings"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/EXIT" />

</LinearLayout>